encapsulates (a bit) stuff)

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 
     <h2>Store:</h2>
 
-    <button id="novice-widgeteer">Hire Luis</button>
-    <button id="master-widgeteer">Hire Peneman Garcia</button>
-    <button id="master-baiter">Hire Master of Dating Sims</button>
-    <button id="super-baiter">Hire Touchpad Sensei</button>
+    <div class="luises">
+        <button id="luis0">Hire Luis(0)</button>
+        <button id="luis1">Hire Peneman Garcia()</button>
+        <button id="luis2">Hire Master of Dating Sims()</button>
+        <button id="luis3">Hire Touchpad Sensei()</button>
+    </div>
 
     <h2>Coding exercises:</h2>
 
