--- a/index.html
+++ b/index.html
@@ -3,23 +3,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
     <title>Cefises</title>
-
-    <style>
-        p.enemy_box
-        {
-            width: 150px;
-            color: red;
-            border-style: solid;
-            border-color: blue;
-        }
-    </style>
 </head>
 <body>
-    <h1>Makis: <span id="widget-count">0</span></h1>
-    <h1>Makis per second: <span id="widget-rate">0</span></h1>
-    <h1>Attack per second: <span id="dps">0</span></h1>
+    
+    <h2>Debugging:</h2>
+
+    <form action="/url" method="GET">
+        <p>Multiply the time step by (don't press enter, it breaks the universe for some reason):</p>
+        <input id="hacky_mult" type="number", placeholder=1>
+    </form>
+
+    <h2>Settings:</h2>
+    <label for="dog-names">Number Format:</label>
+    <select id="number_formatting" name="dog-names" id="dog-names">
+        <option value="scientific">Scientific<button>
+        <option value="standard">Standard<button>
+        <option value="engineering">Engineering<button>
+    </select>
+
+    <h2>Stats:</h2>
+    <h3>Makis: <span id="widget-count">0</span></h3>
+    <h3>Makis per second: <span id="widget-rate">0</span></h3>
+    <h3>Attack per second: <span id="dps">0</span></h3>
 
     <button id="produce-widget">Produce Maki</button>
     <button id="increase-attack">Increase Attack</button>
@@ -33,15 +43,25 @@
         <button id="luis3">Hire Touchpad Sensei()</button>
     </div>
 
+    <h2>Store:</h2>
+
+    <div class="luises">
+        <button id="luis0">Hire Luis(0)</button>
+        <button id="luis1">Hire Peneman Garcia()</button>
+        <button id="luis2">Hire Master of Dating Sims()</button>
+        <button id="luis3">Hire Touchpad Sensei()</button>
+    </div>
+
     <h2>Battle</h2>
+    
     <div class="enemies">
         <div id="enemy_row">
             <ul>
-                <p class="enemy_box" id="enemy_1" style="witdth:25%; border-width: 1px;">10</p>
-                <p class="enemy_box" id="enemy_2" style="witdth:25%; border-width: 1px;">10</p>
-                <p class="enemy_box" id="enemy_3" style="witdth:25%; border-width: 1px;">10</p>
-                <p class="enemy_box" id="enemy_4" style="witdth:25%; border-width: 1px;">10</p>
-                <p class="enemy_box" id="enemy_5" style="witdth:25%; border-width: 1px;">10</p>
+                <p class="enemy_box" id="enemy_1">10</p>
+                <p class="enemy_box" id="enemy_2">10</p>
+                <p class="enemy_box" id="enemy_3">10</p>
+                <p class="enemy_box" id="enemy_4">10</p>
+                <p class="enemy_box" id="enemy_5">10</p>
             </ul>
         </div>
     </div>
@@ -57,6 +77,7 @@
     </ul>
 </body>
 
+<script src="https://cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="js/main.js"></script>
 </html>
