Added save+load functions to the game

--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
         <p>Multiply the time step by (don't press enter, it breaks the universe for some reason):</p>
         <input id="hacky_mult" type="number", placeholder=1>
     </form>
+    
+    <div class="save_buttons">
+        <button id="save_button">Save</button>
+        <button id="load_button">Load</button>
+        <button id="reset_load_button">ResetLoad</button>
+    </div>
 
     <h2>Settings:</h2>
     <label for="dog-names">Number Format:</label>
@@ -43,13 +49,13 @@
         <button id="luis3">Hire Touchpad Sensei()</button>
     </div>
 
-    <h2>Store:</h2>
+    <h2>Upgrades: TODO:</h2>
 
-    <div class="luises">
-        <button id="luis0">Hire Luis(0)</button>
-        <button id="luis1">Hire Peneman Garcia()</button>
-        <button id="luis2">Hire Master of Dating Sims()</button>
-        <button id="luis3">Hire Touchpad Sensei()</button>
+    <div class="eudalds">
+        <button id="eudald0">Upgrade1</button>
+        <button id="eudald1">Upgrade2</button>
+        <button id="eudald2">Upgrade3</button>
+        <button id="eudald3">Upgrade4</button>
     </div>
 
     <h2>Battle</h2>
