Improved battlefield looks

--- a/index.html
+++ b/index.html
@@ -61,18 +61,16 @@
     <h2>Battle</h2>
     
     <div class="enemies">
-        <div id="enemy_row">
-            <ul>
-                <p class="enemy_box" id="enemy_1">10</p>
-                <p class="enemy_box" id="enemy_2">10</p>
-                <p class="enemy_box" id="enemy_3">10</p>
-                <p class="enemy_box" id="enemy_4">10</p>
-                <p class="enemy_box" id="enemy_5">10</p>
-            </ul>
+        <div class="grid-container" id="enemy_row">
+            <div class="enemy_box" id="enemy_1">10</div>
+            <div class="enemy_box" id="enemy_2">10</div>
+            <div class="enemy_box" id="enemy_3">10</div>
+            <div class="enemy_box" id="enemy_4">10</div>
+            <div class="enemy_box" id="enemy_5">10</div>
         </div>
     </div>
 
-    <h2>Coding exercises:</h2>
+    <!--h2>Coding exercises:</h2>
 
     <ul>
         <li>Change the starting costs and see how it affects the game</li>
@@ -80,7 +78,7 @@
         <li>Add an upgrades section</li>
         <li>Add save/load buttons that use localStorage.setItem() and localStorage.getItem()</li>
         <li>Check the Bootstrap 3 checkbox in the upper left and change the &lt;button&gt; elements to use &lt;div class="btn btn-primary"&gt; instead</li>
-    </ul>
+    </ul-->
 </body>
 
 <script src="https://cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
