Added a counter for how many zones of enemies have been cleared

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
         <button id="eudald3">Upgrade4</button>
     </div>
 
-    <h2>Battle</h2>
+    <h2>Battle:</h2>
     
     <div class="enemies">
+        <p id="zone">0</p>
         <div class="grid-container" id="enemy_row">
             <div class="enemy_box" id="enemy_1">10</div>
             <div class="enemy_box" id="enemy_2">10</div>
