--- a/index.html
+++ b/index.html
@@ -84,5 +84,10 @@
 
 <script src="https://cdn.rawgit.com/erosson/swarm-numberformat/v0.4.0/dist/swarm-numberformat.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+<!-- Internal code includes. -->
+<script src="js/battle.js"></script>
+<script src="js/game_state.js"></script>
+<script src="js/main_currency.js"></script>
 <script src="js/main.js"></script>
 </html>
