Added two new kinds of minions

--- a/index.html
+++ b/index.html
@@ -76,7 +76,9 @@
         <!--button id="increase-attack">Increase Attack</button-->
         <button id="buy_normal_minion">Buy Minion (0) (10)</button>
         <button id="buy_super_minion">Buy Super Minion (0) (1000)</button>
-        <button id="buy_mega_minion">Buy Mega Minion (0) (1000000)</button>
+        <button id="buy_mega_minion">Buy Mega Minion (0) (1M)</button>
+        <button id="buy_giga_minion">Buy Giga Minion (0) (1B)</button>
+        <button id="buy_tera_minion">Buy Tera Minion (0) (1T)</button>
         <div class="enemies">
             <p id="zone">0</p>
             <div class="enemy_row" id="enemy_row">
