Added rubies as a secondary currency obtained by looting enemies

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     
         <h2>Stats:</h2>
         <h3>Makis: <span id="widget-count">0</span></h3>
+        <h3 id="rubies-count">Rubies: 0</h3>
         <h3>Makis per second: <span id="widget-rate">0</span></h3>
         <h3>Attack per second: <span id="dps">0</span></h3>
     
@@ -115,6 +116,7 @@
 <script src="js/achievements.js"></script>
 <script src="js/battle.js"></script>
 <script src="js/buying_multipliers.js"></script>
+<script src="js/currency_rubies.js"></script>
 <script src="js/game_state.js"></script>
 <script src="js/main_currency.js"></script>
 <script src="js/main.js"></script>
