Added upgrades to the game purchasable with rubies

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             <button id="luis3">Hire Touchpad Sensei()</button>
         </div>
     
-        <h2>Upgrades: TODO:</h2>
-        <div class="eudalds">
-            <button id="eudald0">Upgrade1</button>
-            <button id="eudald1">Upgrade2</button>
-            <button id="eudald2">Upgrade3</button>
-            <button id="eudald3">Upgrade4</button>
+        <h2>Upgrades:</h2>
+        <div class="upgrades">
+            <button id="upgrade_attack_1">Upgrade1</button>
+            <button id="upgrade_attack_2">Upgrade2</button>
+            <button id="upgrade_attack_3">Upgrade3</button>
+            <button id="upgrade_attack_4">Upgrade4</button>
         </div>
     
         <h2>Battle:</h2>
@@ -121,4 +121,5 @@
 <script src="js/game_state.js"></script>
 <script src="js/main_currency.js"></script>
 <script src="js/main.js"></script>
+<script src="js/upgrades.js"></script>
 </html>
